# bbasic

./: BB基础教程.txt  CMakeLists.txt  README.md  bbasic.bnf  qbasic.bnf  qbasic.ebnf
src/bbc/: CMakeLists.txt  assember.h  assembler.cc  ast.h  ast_dumper.cc  ast_dumper.h  codegen.cc  codegen.h  exception.h  identfinder.cc  identfinder.h  ilister.h  ivector.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  scope.h  stringident.cc  stringident.h  symbol.cc  symbol.h  token.cc  token.h  utils.cc  utils.h  variable_set.cc  variable_set.h
src/bbvm/: CMakeLists.txt  CoreConst.h  Cpu.cpp  Cpu.h  ErrorLog.h  Gpu.cpp  Gpu.h  InPort.cpp  Input.cpp  Input.h  OutPort.cpp  Screen.cpp  Screen.h  Storage.cpp  String.cpp  String.h  anvm.h  bbvm.cc  bbvm.h  config.h  cpu.cc  cpu.h  gpu.cc  inport.cc  input.cc  input.h  input_iml.cc  input_iml.h  main.cc  outport.cc  render.cc  render.h  renderer.cc  renderer.h  screen.cc  screen.h  sdl.cc  sdl.h  storage.c  storage.cc  (+5 more)
test/: test.bas  test_file.bas  test_function.bas
